--- a/dbflaskpython/requirements.txt
+++ b/dbflaskpython/requirements.txt
@@ -3,14 +3,14 @@ click==6.7
 Flask==1.0
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.3.2
-gunicorn==19.7.1
+gunicorn==20.1.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==2.0.1
 marshmallow==2.15.1
 flask-marshmallow<0.12.0
 marshmallow-sqlalchemy==0.13.2
-psycopg2-binary==2.8.6
+psycopg2==2.8.6
 pytz==2018.3
 six==1.11.0
 SQLAlchemy==1.2.5
